[tool.poetry]
name = "ffxiv-upload-achievement-icons"
version = "0.1.0"
description = ""
authors = ["Nicholas Avenell <nicholas@istic.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
paramiko = "^3.5.1"
requests = "^2.32.3"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
autopep8 = "^2.3.2"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
